# pizzaria-backend

./: README.md  alembic.ini  database.py  main.py  pyproject.toml  security.py  test_connection.py
alembic/: env.py
alembic/versions/: 1c576fc3d63e_added_order_and_orderitem_tables.py  203183c31310_added_order_and_orderitem_tables.py  30f48c17ed01_fixed_enum_roles_5_0.py  3ef88b5e42dc_added_order_and_orderitem_tables.py  42f7433a9b30_criar_tabela_loja.py  4a4624a58ea2_added_product_ingredient_and_.py  5d64d161c795_fixed_enum_roles_4_0.py  697eedd50f81_remoção_de_atributo_desnecessario_and_.py  6fe65f10050a_fixed_enum_roles.py  7c039239367c_created_user_table.py  9e03c2b89c25_added_product_ingredient_and_.py  a358a465891f_added_latitude_and_longitude_columns.py  a79025a5f080_user_username_in_table_users.py  c1201a92afae_fixed_enum_roles_8_0.py  d079452d95a0_added_field_to_stock_entity.py  d6d0d7e502ca_changed_name_of_columns_in_stcok.py  dda2571977a1_fixed_enum_roles_7_0.py  f77444a9d48c_fixed_enum_roles_6_0.py
models/: ingredient.py  order.py  order_item.py  product.py  products_ingredients.py  stock.py  store.py  user.py
routers/: ingredients.py  orders.py  stock.py  stores.py  users.py
schemas/: ingredient.py  loja.py  order.py  product.py  products_ingredients.py  stock.py  user.py
utils/: routers.py
